--- a/stylesheets/scss/_header.scss
+++ b/stylesheets/scss/_header.scss
@@ -74,6 +74,7 @@
 }
 
 .main-menu-wrapper {
+  max-width: 100%;
   vertical-align: top;
   text-align: right;
   @include query($tablet-2) {
