--- a/stylesheets/scss/_menus.scss
+++ b/stylesheets/scss/_menus.scss
@@ -228,6 +228,8 @@ ul.menu {
 
 // Styling rules for the site's main menu. Usually the first level menu but can have the sub menu in it aswell.
 .menu-main {
+  @include hyphenate(true);
+
   @include query($tablet-2) {
     display: none;
   }
